build command changed to cd iTrust2 && mvn compile && mvn clean test

--- a/jenkins_files/itrust-test.yml
+++ b/jenkins_files/itrust-test.yml
@@ -11,8 +11,7 @@
         sed -i "s/username/username $MAIL_USER/g" $WORKSPACE/iTrust2/src/main/java/email.properties
         sed -i "s/password/password $MAIL_PASSWORD/g" $WORKSPACE/iTrust2/src/main/java/email.properties
         sed -i "s/from/from $MAIL_USER/g" $WORKSPACE/iTrust2/src/main/java/email.properties
-        cd $WORKSPACE/iTrust2
-        mvn clean test
+        cd iTrust2 &&  mvn compile && mvn clean test
     concurrent: false
     description: null
     disabled: false
