Force get local conf file for job builder

--- a/roles/configure-jenkins/tasks/jjb.yml
+++ b/roles/configure-jenkins/tasks/jjb.yml
@@ -232,7 +232,7 @@
     dest: /etc/jenkins_jobs/jenkins_jobs.ini
     
 - name: Upload Itrust Job to Jenkins
-  command: jenkins-jobs update itrust-test.yml
+  command: jenkins-jobs --conf jenkins_jobs.ini update itrust-test.yml
   args:
     chdir: /var/lib/jenkins/project_repo/jenkins_files/
   tags:
