Changed path for pom-data.xml in job

--- a/jenkins_files/itrust-test.yml
+++ b/jenkins_files/itrust-test.yml
@@ -11,8 +11,9 @@
         sed -i "s/username/username $MAIL_USER/g" $WORKSPACE/iTrust2/src/main/java/email.properties
         sed -i "s/password/password $MAIL_PASSWORD/g" $WORKSPACE/iTrust2/src/main/java/email.properties
         sed -i "s/from/from $MAIL_USER/g" $WORKSPACE/iTrust2/src/main/java/email.properties
+        cp $HOME/project_repo/jenkins_files/pom-data.xml iTrust2/pom-data.xml
         cd iTrust2
-        mvn -f ../../project_repo/jenkins_files/pom-data.xml process-test-classes
+        mvn -f pom-data.xml process-test-classes
         mvn clean test verify
     concurrent: false
     description: null
