Update prioritizer job

--- a/jenkins_files/prioritizer.yml
+++ b/jenkins_files/prioritizer.yml
@@ -3,8 +3,10 @@
     block-upstream: false
     builders:
     - shell: |-
-      echo 'node script goes here'
+        echo 'node script goes here'
+        echo ''
     concurrent: false
+    description: null
     disabled: false
     name: !!python/unicode 'prioritizer'
     project-type: freestyle
