Added prioritizer. Please work.

--- a/jenkins_files/prioritizer.yml
+++ b/jenkins_files/prioritizer.yml
@@ -3,8 +3,7 @@
     block-upstream: false
     builders:
     - shell: |-
-        echo 'node script goes here'
-        echo ''
+        python $HOME/project_repo/iTrust-prioritizer/prioritizer.py
     concurrent: false
     description: null
     disabled: false
