--- a/jenkins_files/itrust-test.yml
+++ b/jenkins_files/itrust-test.yml
@@ -30,7 +30,7 @@
         matches:
         - log-text: null
           operator: AND
-        run-if-job-successful: true
+        run-if-job-successful: false
         script: |-
             mkdir -p $HOME/project_repo/reports;
             mv $WORKSPACE/iTrust2/target/surefire-reports/ $HOME/project_repo/reports/$BUILD_NUMBER;
