--- a/roles/itrust-fuzzer/tasks/fuzz-itrust-repo.yml
+++ b/roles/itrust-fuzzer/tasks/fuzz-itrust-repo.yml
@@ -35,12 +35,13 @@
     JOB_URL=http://localhost:{{ env_vars.jenkins_port }}/job/itrust-test
     JOB_STATUS_URL=${JOB_URL}/lastBuild/api/json
 
-    # Run job without fuzzing
-    # java -jar /var/cache/jenkins/war/WEB-INF/jenkins-cli.jar -s http://localhost:{{ env_vars.jenkins_port }}/ build 'itrust-test'
-
     while [ "$COUNTER" -lt "$RUNS" ]; do
-      cd /var/lib/jenkins/project_repo/iTrust-fuzzer;
-      mvn exec:java -Dexec.mainClass="com.cowboydevop.fuzzer.Fuzzer";
+      # dont fuzz first run
+      if [ "$COUNTER" -ne 0 ]
+      then
+        cd /var/lib/jenkins/project_repo/iTrust-fuzzer;
+        mvn exec:java -Dexec.mainClass="com.cowboydevop.fuzzer.Fuzzer";
+      fi
 
       cd /var/lib/jenkins/project_repo/iTrust2-v2/iTrust2;
       mvn compile;
