--- a/checkbox/server-side/site/package.json
+++ b/checkbox/server-side/site/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "test": "../../test/node_modules/.bin/nyc --reporter=text --all ../../test/node_modules/.bin/istanbul cover ./test.js"
+    "test": "node main.js && node test.js"
   },
   "config": {
     "blanket": {
