--- a/checkbox/server-side/site/package.json
+++ b/checkbox/server-side/site/package.json
@@ -24,7 +24,7 @@
     "istanbul-middleware": "^0.2.2",
     "iter-tools": "^1.4.1",
     "jade": "^1.11.0",
-    "json5": "^0.5.1",
+    "json5": "*",
     "marked": "0.3.9",
     "mongodb": "^2.2.22",
     "mongoose": "^5.0.10",
@@ -35,7 +35,6 @@
     "randomstring": "^1.1.5",
     "request": "^2.85.0",
     "sinon": "^4.4.6",
-    "sleep": "^5.1.1",
     "underscore": "^1.8.3",
     "validator": "^6.2.1"
   }
