--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -6,3 +6,8 @@ env_vars:
   GIT_PASSWORD: ""
   MAIL_PASSWORD: ""
   MAIL_USER: ""
+  MONGO_PORT: ""
+  MONGO_IP: ""
+  MONGO_USER: ""
+  MONGO_PASSWORD: ""
+  MAIL_SMTP: ""
