--- a/Deployment/jenkins_files/itrust.yml
+++ b/Deployment/jenkins_files/itrust.yml
@@ -43,7 +43,7 @@
         wipe-workspace: true
     triggers:
     - pollscm:
-        cron: null
+        cron: ''
         ignore-post-commit-hooks: false
     wrappers:
         - inject-passwords:
