--- a/Deployment/roles/provision-checkbox/tasks/provision.yml
+++ b/Deployment/roles/provision-checkbox/tasks/provision.yml
@@ -64,7 +64,7 @@
 
 - name: Update inventory
   lineinfile:
-    path: ./deploy-inventory
+    path: ./inventory
     insertafter: 'checkbox'
     line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/checkbox-key.pem"
     state: present
