--- a/Deployment/roles/provision-itrust/tasks/provision.yml
+++ b/Deployment/roles/provision-itrust/tasks/provision.yml
@@ -61,7 +61,7 @@
 
 - name: Update inventory
   lineinfile:
-    path: ./deploy-inventory
+    path: ./inventory
     insertafter: 'itrust'
     line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/itrust-key.pem"
     state: present
