--- a/Deployment/roles/provision-itrust/tasks/provision.yml
+++ b/Deployment/roles/provision-itrust/tasks/provision.yml
@@ -22,6 +22,10 @@
       - proto: tcp
         ports: 8080
         cidr_ip: 0.0.0.0/0
+    rules_egress:
+      - proto: all
+        ports: all
+        cidr_ip: 0.0.0.0/0
 
 - name: Create an AWS server for iTrust
   ec2:
