Added replacing for server IPs

--- a/Rolling-Update/group_vars/all/vars.yml
+++ b/Rolling-Update/group_vars/all/vars.yml
@@ -3,6 +3,12 @@ env_vars:
   mysql_host: "<HOST_HERE>"
   mysql_user: ""
   mysql_password: ""
+  MONITOR_SERVER: "<MONITOR-HERE>"
+  iTrust1: "<SERVER-1>"
+  iTrust2: "<SERVER-2>"
+  iTrust3: "<SERVER-3>"
+  iTrust4: "<SERVER-4>"
+  iTrust5: "<SERVER-5>"
   ACCESS_KEY: ""
   SECRET_KEY: ""
   GIT_USER: ""
