--- a/Rolling-Update/roles/provision-itrust/tasks/provisionEC2Instance.yml
+++ b/Rolling-Update/roles/provision-itrust/tasks/provisionEC2Instance.yml
@@ -51,3 +51,10 @@
     insertafter: 'itrust'
     line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/itrust-key.pem"
     state: present
+
+- name: Update inventory for redeployment
+  lineinfile:
+    path: ./redeploy-inventory
+    insertafter: "itrust{{ outer_item }}"
+    line: "{{aws.instances[0].public_ip}} ansible_ssh_user=ubuntu ansible_ssh_private_key_file=~/itrust-key.pem"
+    state: present
