--- a/Infrastructure/docker-compose.yml
+++ b/Infrastructure/docker-compose.yml
@@ -1,13 +1,13 @@
 ---
-version: "3"
+version: "3.0"
 services:
   mongodb:
     image: mongo:3.6
     container_name: mongod
     environment:
-      - MONGO_INITDB_ROOT_USERNAME=admin
-      - MONGO_INITDB_ROOT_PASSWORD=password
-  checkbox.io:
+      - MONGO_INITDB_ROOT_USERNAME="{{env_vars.MONGO_USER}}"
+      - MONGO_INITDB_ROOT_PASSWORD="{{env_vars.MONGO_PASSWORD}}"
+  checkbox:
     image: checkbox
     build:
       context: .
@@ -16,11 +16,11 @@ services:
     environment:
       - MONGO_PORT=3002 
       - MONGO_IP=mongodb
-      - MONGO_USER=admin
-      - MONGO_PASSWORD=password
-      - MAIL_USER=devops.itrustv2@gmail.com
-      - MAIL_PASSWORD=itrustv2!
-      - MAIL_SMTP=smtp.gmail.com
+      - MONGO_USER="{{env_vars.MONGO_USER}}"
+      - MONGO_PASSWORD="{{env_vars.MONGO_PASSWORD}}"
+      - MAIL_USER="{{env_vars.MAIL_USER}}"
+      - MAIL_PASSWORD="{{env_vars.MAIL_PASSWORD}}"
+      - MAIL_SMTP="{{env_vars.MAIL_SMTP}}"
     volumes:
       - ./checkbox.io/server-side/site:/usr/src/app
       - /usr/src/app/node_modules
