--- a/CanaryRelease/roles/configure-checkbox/tasks/clone-build.yml
+++ b/CanaryRelease/roles/configure-checkbox/tasks/clone-build.yml
@@ -43,6 +43,9 @@
   become: yes
   args:
     chdir: "/var/lib/jenkins/project_repo/checkbox/server-side/site/"
+    
+- name: Start App
+  command: forever start server.js chdir="/var/lib/jenkins/project_repo/checkbox/server-side/site/"      
   
   
 
