--- a/Infrastructure/docker-compose.yml
+++ b/Infrastructure/docker-compose.yml
@@ -3,10 +3,10 @@ version: "3.0"
 services:
   mongodb:
     image: mongo:3.6
-    container_name: mongod
+    container_name: mongodb
     environment:
-      - MONGO_INITDB_ROOT_USERNAME="{{env_vars.MONGO_USER}}"
-      - MONGO_INITDB_ROOT_PASSWORD="{{env_vars.MONGO_PASSWORD}}"
+      - MONGO_INITDB_ROOT_USERNAME={{env_vars.MONGO_USER}}
+      - MONGO_INITDB_ROOT_PASSWORD={{env_vars.MONGO_PASSWORD}}
   checkbox:
     image: checkbox
     build:
@@ -16,11 +16,11 @@ services:
     environment:
       - MONGO_PORT=3002 
       - MONGO_IP=mongodb
-      - MONGO_USER="{{env_vars.MONGO_USER}}"
-      - MONGO_PASSWORD="{{env_vars.MONGO_PASSWORD}}"
-      - MAIL_USER="{{env_vars.MAIL_USER}}"
-      - MAIL_PASSWORD="{{env_vars.MAIL_PASSWORD}}"
-      - MAIL_SMTP="{{env_vars.MAIL_SMTP}}"
+      - MONGO_USER={{env_vars.MONGO_USER}}
+      - MONGO_PASSWORD={{env_vars.MONGO_PASSWORD}}
+      - MAIL_USER={{env_vars.MAIL_USER}}
+      - MAIL_PASSWORD={{env_vars.MAIL_PASSWORD}}
+      - MAIL_SMTP={{env_vars.MAIL_SMTP}}
     volumes:
       - ./checkbox.io/server-side/site:/usr/src/app
       - /usr/src/app/node_modules
@@ -38,4 +38,4 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - checkbox.io
+      - checkbox
