--- a/Infrastructure/roles/kube-init/tasks/kube-init.yml
+++ b/Infrastructure/roles/kube-init/tasks/kube-init.yml
@@ -33,5 +33,5 @@
     remote_src: yes
 
 - name: Deploy a POD network
-  shell: sudo kubectl apply -f https://docs.projectcalico.org/v3.1/getting-started/kubernetes/installation/hosted/kubeadm/1.7/calico.yaml
+  shell: sudo kubectl apply -f "https://cloud.weave.works/k8s/net?k8s-version=$(kubectl version | base64 | tr -d '\n')"
 
