--- a/Infrastructure/roles/deploy/tasks/deploy.yml
+++ b/Infrastructure/roles/deploy/tasks/deploy.yml
@@ -8,9 +8,16 @@
 - name: Copy checkbox files
   become: yes
   synchronize:
-    src: $HOME/CSC519-Project/Infrastructure
+    src: ../Infrastructure
     dest: /usr/src/
     recursive: yes
+
+- name: Set permission
+  become: yes
+  file: 
+    path: /usr/src/Infrastructure
+    mode: "u=rwx,g=rwx,o=rwx"
+    state: directory
 
 - name: Create docker-compose.yml
   template: 
@@ -24,17 +31,3 @@
 
 - name: Deploy checkbox image
   shell: sudo kubectl run checkbox --image=ankursaxena135/checkbox
-
-- name: Test pod network
-  shell: sudo kubectl get nodes
-  register: nodes_output
-
-- debug:
-    msg: "{{nodes_output.stdout}}"
-
-- name: Test pod network
-  shell: sudo kubectl get pods
-  register: pods_output
-
-- debug:
-    msg: "{{pods_output.stdout}}"
