Uploading gerrit code for Milestone4

--- a/Deployment+RollingUpdate/deploy.yml
+++ b/Deployment+RollingUpdate/deploy.yml
@@ -24,6 +24,7 @@
     - configure-itrust
     - configure-checkbox
     - configure-jenkins
+    - configure-gerrit
 
 - hosts: mysql
   gather_facts: yes
