--- a/Deployment+RollingUpdate/group_vars/all/vars.yml
+++ b/Deployment+RollingUpdate/group_vars/all/vars.yml
@@ -1,23 +1,32 @@
 ---
 env_vars:
   mysql_host: "<HOST_HERE>"
-  mysql_user: ""
-  mysql_password: ""
   MONITOR_SERVER: "<MONITOR-HERE>"
-  jenkins_port: ""
   iTrust1: "<SERVER-1>"
   iTrust2: "<SERVER-2>"
   iTrust3: "<SERVER-3>"
   iTrust4: "<SERVER-4>"
   iTrust5: "<SERVER-5>"
+  jenkins_port: ""
+  gerrit_port: ""
   ACCESS_KEY: ""
   SECRET_KEY: ""
   GIT_USER: ""
   GIT_PASSWORD: ""
-  MAIL_PASSWORD: ""
+  mysql_user: ""
+  mysql_password: ""
   MAIL_USER: ""
+  MAIL_PASSWORD: ""
   MAIL_SMTP: ""
   MONGO_PORT: ""
   MONGO_IP: ""
   MONGO_USER: ""
   MONGO_PASSWORD: ""
+  GERRIT_ADMIN_USER: ""
+  GERRIT_ADMIN_EMAIL: ""
+  GERRIT_ADMIN_FULLNAME: ""
+  GERRIT_ADMIN_PASSWORD: ""
+  GERRIT_USER_USER: ""
+  GERRIT_USER_FULLNAME: ""
+  GERRIT_USER_PASSWORD: ""
+  GERRIT_USER_EMAIL: ""
